[gd_scene format=3 uid="uid://dowc4ya2p2mh4"]

[ext_resource type="Script" uid="uid://bsg1eg4pooy10" path="res://scenes/ui/settings/bus_volume_slider_control/bus_volume_slider_control.gd" id="1_y8ffd"]

[node name="BusVolumeSlider" type="HBoxContainer" unique_id=1993745931]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
script = ExtResource("1_y8ffd")

[node name="Label" type="Label" parent="." unique_id=905375406]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "[Bus] volume:"

[node name="VolumeSlider" type="HSlider" parent="." unique_id=1264329416]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 5.0

[connection signal="drag_ended" from="VolumeSlider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
